--- a/_sass/base.scss
+++ b/_sass/base.scss
@@ -1,7 +1,11 @@
 body {
-    background-color: #0f0f0f;
+    background-color: #121212;
     font-family: sans-serif;
     margin: auto;
     max-width: 70ch;
-    color: #fff;
+    color: #e5e5e5;
+}
+h1, h2 {
+    text-align: center;
+    font-family: Impact;
 }
